trunk/Archive2/d4/dff4d458c67071/output
main.cpp:6:1: error: stray ‘@’ in program
 @class flights;
 ^
main.cpp: In function ‘int main()’:
main.cpp:13:35: error: invalid use of incomplete type ‘class flights’
     flights * fli = new flights(10);
                                   ^
main.cpp:6:8: error: forward declaration of ‘class flights’
 @class flights;
        ^
main.cpp:13:15: warning: unused variable ‘fli’ [-Wunused-variable]
     flights * fli = new flights(10);
               ^
